# image-gallery

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.claude/agents/: rust-expert.md  ui-reviewer.md
.claude/commands/: build.md  dev.md  fix-issue.md  issue.md  pr.md  review.md
.claude/rules/: backend-rust.md  frontend-react.md  frontend-styling.md  testing.md
doc/: 03_phase2-proposal.md  04_phase3-video-enhancement.md  05_phase4-group-management.md  06_phase4-completed.md  08_phase5-completed.md  09_claude-code-setup-plan.md  10_phase6-ux-multidir-design.md  11_phase7-completed.md  12_phase8-technical-improvements.md  architecture.md  commands-reference.md  er-diagram.md  implementation-plan.md  mp4-support-plan.md  requiment.md
e2e/: fixtures.ts  gallery.spec.ts
image-gallery/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
image-gallery/doc/: requirement.md
image-gallery/src/: App.tsx
image-gallery/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.tsx  index.css  main.tsx  test-utils.tsx
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  fs_utils.rs  lib.rs  video_utils.rs  watcher.rs
src/components/: AlbumHeader.tsx  Breadcrumb.tsx  EmptyState.tsx  ErrorBoundary.tsx  GroupAlbumView.tsx  GroupComments.tsx  GroupItem.tsx  GroupModal.tsx  Header.tsx  ImageDetail.tsx  ImageGrid.tsx  LoadingSpinner.tsx  MainGallery.tsx  MediaCard.tsx  SelectionBar.tsx  Sidebar.tsx  (+4 more)
(+55 files in other folders)
