[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
dirs = "6.0.0"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
notify = "7"
notify-debouncer-mini = "0.5"
